axum-macros/tests/debug_handler/fail/generics_fail_into_response.rs
use axum_macros::debug_handler;

#[debug_handler(with(T = String, T = i64))]
async fn handler<T>() -> Result<T, ()> {
    Err(())
}

fn main() {}
